finish calCouponSaved function

--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,8 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/success/success.controller.js"></script>
+      <script src="app/main/main.js"></script>
+      <script src="app/Factory/Reward/Reward.service.js"></script>
       <script src="app/Factory/Shipment/Shipment.service.js"></script>
       <script src="app/Filter/encodeURI/encodeURI.filter.js"></script>
       <script src="app/account/account.js"></script>
@@ -75,8 +76,8 @@
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
-      <script src="app/main/main.js"></script>
       <script src="app/Factory/Customer/Customer.service.js"></script>
+      <script src="app/success/success.controller.js"></script>
       <script src="app/success/success.js"></script>
       <script src="app/Factory/Location/Location.service.js"></script>
       <script src="components/auth/auth.service.js"></script>
