--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,8 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.js"></script>
+      <script src="app/main/main.controller.js"></script>
+      <script src="app/Factory/Product/Product.service.js"></script>
       <script src="app/Factory/Promotion/Promotion.service.js"></script>
       <script src="app/Factory/Reward/Reward.service.js"></script>
       <script src="app/Factory/Shipment/Shipment.service.js"></script>
@@ -77,8 +78,8 @@
       <script src="app/Factory/Cart/Cart.service.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="app/main/main.controller.js"></script>
       <script src="app/Factory/Customer/Customer.service.js"></script>
+      <script src="app/main/main.js"></script>
       <script src="app/success/success.controller.js"></script>
       <script src="app/success/success.js"></script>
       <script src="app/Factory/Location/Location.service.js"></script>
@@ -93,7 +94,7 @@
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
-      <script src="app/Factory/Product/Product.service.js"></script>
+      <script src="app/Factory/Order/Order.service.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
