--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,7 @@
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
       <script src="app/main/main.controller.js"></script>
+      <script src="app/Factory/Payment/Payment.service.js"></script>
       <script src="app/Factory/Product/Product.service.js"></script>
       <script src="app/Factory/Promotion/Promotion.service.js"></script>
       <script src="app/Factory/Reward/Reward.service.js"></script>
