clean up config variables

--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,8 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="app/checkout/checkout.controller.js"></script>
+      <script src="app/Factory/Order/Order.service.js"></script>
       <script src="app/Factory/Payment/Payment.service.js"></script>
       <script src="app/Factory/Product/Product.service.js"></script>
       <script src="app/Factory/Promotion/Promotion.service.js"></script>
@@ -79,11 +80,13 @@
       <script src="app/Factory/Cart/Cart.service.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="app/Factory/Customer/Customer.service.js"></script>
+      <script src="app/Factory/Config/Config.service.js"></script>
+      <script src="app/checkout/checkout.js"></script>
+      <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/success/success.controller.js"></script>
       <script src="app/success/success.js"></script>
-      <script src="app/Factory/Location/Location.service.js"></script>
+      <script src="app/Factory/Customer/Customer.service.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -95,7 +98,7 @@
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
-      <script src="app/Factory/Order/Order.service.js"></script>
+      <script src="app/Factory/Location/Location.service.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
