add ui-router to checkout process

--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/checkout/checkout.controller.js"></script>
+      <script src="app/checkout/product_check/product_check.js"></script>
       <script src="app/Factory/Order/Order.service.js"></script>
       <script src="app/Factory/Payment/Payment.service.js"></script>
       <script src="app/Factory/Product/Product.service.js"></script>
@@ -80,8 +80,12 @@
       <script src="app/Factory/Cart/Cart.service.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="app/Factory/Config/Config.service.js"></script>
+      <script src="app/checkout/checkout.controller.js"></script>
       <script src="app/checkout/checkout.js"></script>
+      <script src="app/Factory/Config/Config.service.js"></script>
+      <script src="app/checkout/shipment_payment/shipment_payment.js"></script>
+      <script src="app/checkout/success/success.controller.js"></script>
+      <script src="app/checkout/success/success.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/success/success.controller.js"></script>
