--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,9 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
+    
+    <script src="/bower_components/angular-messages/angular-messages.js"></script>
+
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
