--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/angular-scroll/angular-scroll.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
