add megamenu and get cart by session

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,12 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<link href="https://vecsgardenia.com/image/catalog/LOGO/icon.png" rel="icon">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+		
+		<!-- Manual add Css and Javascript -->
+		<!-- <link rel="stylesheet" href="assets/stylesheet/megamenu.css"> -->
+		<link rel="stylesheet" href="assets/stylesheet/stylesheet.css">
+		<!-- endManual -->
+		
 		<!-- build:css(client) app/vendor.css -->
 			<!-- bower:css -->
 			<link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
@@ -84,14 +90,15 @@
 			<script src="bower_components/angular-ui-router-title/angular-ui-router-title.js"></script>
 			<!-- endbower -->
 		<!-- endbuild -->
-
+      <script src="assets/javascript/common.js"></script>
 		<!-- build:js(.tmp) app/app.js -->
 			<script src="app/app.js"></script>
 			<!-- injector:js -->
 			<script src="app/admin/admin.module.js"></script>
 			<script src="components/auth/auth.module.js"></script>
 			<script src="components/util/util.module.js"></script>
-			<script src="app/checkout/failure/failure.js"></script>
+			<script src="app/checkout/failure/failure.controller.js"></script>
+			<script src="app/Factory/Megamenu/Megamenu.service.js"></script>
 			<script src="app/Factory/Order/Order.service.js"></script>
 			<script src="app/Factory/Payment/Payment.service.js"></script>
 			<script src="app/Factory/Product/Product.service.js"></script>
@@ -109,8 +116,8 @@
 			<script src="app/app.constant.js"></script>
 			<script src="app/checkout/checkout.controller.js"></script>
 			<script src="app/checkout/checkout.js"></script>
-			<script src="app/checkout/failure/failure.controller.js"></script>
 			<script src="app/Factory/Config/Config.service.js"></script>
+			<script src="app/checkout/failure/failure.js"></script>
 			<script src="app/checkout/final_confirm/final_confirm.js"></script>
 			<script src="app/checkout/product_check/product_check.js"></script>
 			<script src="app/checkout/shipment_payment/shipment_payment.js"></script>
