update session cart

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 		
 		<!-- Manual add Css and Javascript -->
 		<!-- <link rel="stylesheet" href="assets/stylesheet/megamenu.css"> -->
-		<link rel="stylesheet" href="assets/stylesheet/stylesheet.css">
+		<link rel="stylesheet" href="https://vecsgardenia.com/catalog/view/theme/pav_fashion/stylesheet/vecs-stylesheet/stylesheet.css">
 		<!-- endManual -->
 		
 		<!-- build:css(client) app/vendor.css -->
@@ -90,7 +90,7 @@
 			<script src="bower_components/angular-ui-router-title/angular-ui-router-title.js"></script>
 			<!-- endbower -->
 		<!-- endbuild -->
-      <script src="assets/javascript/common.js"></script>
+      <script type="text/javascript" src="https://vecsgardenia.com/catalog/view/javascript/common.js"></script>
 		<!-- build:js(.tmp) app/app.js -->
 			<script src="app/app.js"></script>
 			<!-- injector:js -->
