fix ie sameOrigin bug

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 		
 		<!-- Manual add Css and Javascript -->
 		<!-- <link rel="stylesheet" href="assets/stylesheet/megamenu.css"> -->
-		<link rel="stylesheet" href="https://vecsgardenia.com/catalog/view/theme/pav_fashion/stylesheet/vecs-stylesheet/stylesheet.css">
+		<link rel="stylesheet" href="https://vecsgardenia.com/catalog/view/theme/pav_fashion/stylesheet/vecs-stylesheet/stylesheet.min.css">
 		<!-- endManual -->
 		
 		<!-- build:css(client) app/vendor.css -->
