add referral system to checkout process

--- a/client/index.html
+++ b/client/index.html
@@ -113,6 +113,7 @@
 			<script src="app/Factory/Payment/Payment.service.js"></script>
 			<script src="app/Factory/Product/Product.service.js"></script>
 			<script src="app/Factory/Promotion/Promotion.service.js"></script>
+			<script src="app/Factory/Referral/Referral.service.js"></script>
 			<script src="app/Factory/Reward/Reward.service.js"></script>
 			<script src="app/Factory/Shipment/Shipment.service.js"></script>
 			<script src="app/Filter/encodeURI/encodeURI.filter.js"></script>
@@ -140,6 +141,7 @@
 			<script src="components/auth/interceptor.service.js"></script>
 			<script src="components/auth/router.decorator.js"></script>
 			<script src="components/auth/user.service.js"></script>
+			<script src="components/footer/footer.controller.js"></script>
 			<script src="components/footer/footer.directive.js"></script>
 			<script src="components/modal/modal.service.js"></script>
 			<script src="components/mongoose-error/mongoose-error.directive.js"></script>
