--- a/client/index.html
+++ b/client/index.html
@@ -107,7 +107,7 @@
 			<script src="app/admin/admin.module.js"></script>
 			<script src="components/auth/auth.module.js"></script>
 			<script src="components/util/util.module.js"></script>
-			<script src="app/checkout/failure/failure.controller.js"></script>
+			<script src="app/checkout/failure/failure.js"></script>
 			<script src="app/Factory/Megamenu/Megamenu.service.js"></script>
 			<script src="app/Factory/Order/Order.service.js"></script>
 			<script src="app/Factory/Payment/Payment.service.js"></script>
@@ -116,6 +116,7 @@
 			<script src="app/Factory/Referral/Referral.service.js"></script>
 			<script src="app/Factory/Reward/Reward.service.js"></script>
 			<script src="app/Factory/Shipment/Shipment.service.js"></script>
+			<script src="app/Factory/ShippingInfo/ShippingInfo.service.js"></script>
 			<script src="app/Filter/encodeURI/encodeURI.filter.js"></script>
 			<script src="app/account/account.js"></script>
 			<script src="app/account/login/login.controller.js"></script>
@@ -127,10 +128,13 @@
 			<script src="app/app.constant.js"></script>
 			<script src="app/checkout/checkout.controller.js"></script>
 			<script src="app/checkout/checkout.js"></script>
+			<script src="app/checkout/failure/failure.controller.js"></script>
 			<script src="app/Factory/Config/Config.service.js"></script>
-			<script src="app/checkout/failure/failure.js"></script>
+			<script src="app/checkout/final_confirm/final_confirm.controller.js"></script>
 			<script src="app/checkout/final_confirm/final_confirm.js"></script>
+			<script src="app/checkout/product_check/product_check.controller.js"></script>
 			<script src="app/checkout/product_check/product_check.js"></script>
+			<script src="app/checkout/shipment_payment/shipment_payment.controller.js"></script>
 			<script src="app/checkout/shipment_payment/shipment_payment.js"></script>
 			<script src="app/checkout/success/success.controller.js"></script>
 			<script src="app/checkout/success/success.js"></script>
